--- a/final/code_final_after_7_top.ipynb
+++ b/final/code_final_after_7_top.ipynb
@@ -81,7 +81,7 @@
     "pa_disconnected_=0\n",
     "restart_=0\n",
     "pups_control = 3\n",
-    "\n",
+    "water=0\n",
     "\n",
     "#obtain current time\n",
     "current_time=[time.localtime().tm_year,time.localtime().tm_mon, \\\n",
@@ -97,10 +97,11 @@
     "out_raw_disconnected = cv.VideoWriter('D:'+filename+'.disconnected.raw.avi', fourcc, fps, (int(width), int(height)))\n",
     "out_raw_pa_disconnected = cv.VideoWriter('D:'+filename+'.pa_disconnected.raw.avi', fourcc, fps, (int(width), int(height)))\n",
     "out_raw_raw = cv.VideoWriter('D:'+filename+'.raw.avi', fourcc, fps, (int(width), int(height)))\n",
+    "out_raw_water = cv.VideoWriter('D:'+filename+'.water.avi', fourcc, fps, (150, 100))\n",
     "with open(\"D:\"+filename+\".csv\", 'a',newline=\"\") as file:\n",
     "    writer = csv.writer(file)\n",
     "    writer.writerow([\"year\", \"month\",\"day\",\"hour\",\"minute\",\\\n",
-    "                     \"second\",\"1 Group\",\"2 Groups\",\"More than 2 groups\"])\n",
+    "                     \"second\",\"1 Group\",\"2 Groups\",\"More than 2 groups\",\"water\"])\n",
     "\n",
     "#/recording infor\n",
     "while True: #repeat infinitely\n",
@@ -129,12 +130,13 @@
     "                out_raw_disconnected = cv.VideoWriter('D:'+filename+'.disconnected.raw.avi', fourcc, fps, (int(width), int(height)))\n",
     "                out_raw_pa_disconnected = cv.VideoWriter('D:'+filename+'.pa_disconnected.raw.avi', fourcc, fps, (int(width), int(height)))\n",
     "                out_raw_raw = cv.VideoWriter('D:'+filename+'.raw.avi', fourcc, fps, (int(width), int(height)))\n",
+    "                out_raw_water = cv.VideoWriter('D:'+filename+'.water.avi', fourcc, fps, (150, 100))\n",
     "                basis_time=current_time_second\n",
     "                with open(\"D:\"+filename+\".csv\", 'a',newline=\"\") as file:\n",
     "                    writer = csv.writer(file)\n",
     "                    writer.writerow([\"year\", \"month\",\"day\",\"hour\",\"minute\",\\\n",
-    "                                     \"second\",\"1 Group\",\"2 Groups\",\"More than 2 groups\"])\n",
-    "\n",
+    "                                     \"second\",\"1 Group\",\"2 Groups\",\"More than 2 groups\",\"water\"])\n",
+    "                water=0\n",
     "                start_time = time.time()\n",
     "                flag_record = 0\n",
     "                capture.release()\n",
@@ -173,6 +175,7 @@
     "    \n",
     "    frame_raw = frame_original.copy()\n",
     "    frame_pups = frame_original.copy()\n",
+    "    frame_water = frame_original[250:350,650:800,:].copy()\n",
     "    frame_pups = frame_pups[height_:580,width_:680,:]\n",
     "    \n",
     "    frame_white_pups = np.zeros((frame_pups.shape[0],frame_pups.shape[1]))\n",
@@ -228,21 +231,31 @@
     "    cv.circle(frame_original, (int(y_group)+width_,int(x_group)+height_), 10, (0, 255, 0), -1)\n",
     "    \n",
     "    #/pups\n",
-    "\n",
-    "    #put current time\n",
-    "    cv.putText(frame_raw, str(current_time[0])+\".\"+str(current_time[1])+\".\"+str(current_time[2]), \\\n",
-    "            (0,70), cv.FONT_HERSHEY_SIMPLEX, 0.5,(0,0,0),1,cv.LINE_AA)\n",
-    "    cv.putText(frame_raw, str(current_time[3])+\".\"+\\\n",
-    "                                       str(current_time[4])+\".\"+str(current_time[5]), \\\n",
-    "            (0,150), cv.FONT_HERSHEY_SIMPLEX, 0.5,(0,0,0),1,cv.LINE_AA)\n",
-    "    cv.putText(frame_original, str(current_time[0])+\".\"+str(current_time[1])+\".\"+str(current_time[2]), \\\n",
-    "            (0,70), cv.FONT_HERSHEY_SIMPLEX, 0.5,(0,0,0),1,cv.LINE_AA)\n",
-    "    cv.putText(frame_original, str(current_time[3])+\".\"+\\\n",
-    "                                       str(current_time[4])+\".\"+str(current_time[5]), \\\n",
-    "            (0,150), cv.FONT_HERSHEY_SIMPLEX, 0.5,(0,0,0),1,cv.LINE_AA)\n",
     "    \n",
+    "    frame_water_RGB=frame_water.copy()\n",
+    "    frame_water= cv.inRange(frame_water, (0,0,0), (outer,outer,outer))\n",
+    "    \n",
+    "    #put current time\n",
+    "    cv.putText(frame_raw, str(current_time[0])+\".\"+str(current_time[1])+\".\"+str(current_time[2])+\".\"+str(current_time[3])+\".\"+\\\n",
+    "                                       str(current_time[4])+\".\"+str(current_time[5]), \\\n",
+    "            (0,20), cv.FONT_HERSHEY_SIMPLEX, 0.5,(0,0,0),1,cv.LINE_AA)\n",
+    "    \n",
+    "    cv.putText(frame_original, str(current_time[0])+\".\"+str(current_time[1])+\".\"+str(current_time[2])+\".\"+str(current_time[3])+\".\"+\\\n",
+    "                                       str(current_time[4])+\".\"+str(current_time[5]), \\\n",
+    "            (0,20), cv.FONT_HERSHEY_SIMPLEX, 0.5,(0,0,0),1,cv.LINE_AA)\n",
+    "    \n",
+    "    cv.putText(frame_water_RGB, str(current_time[0])+\".\"+str(current_time[1])+\".\"+str(current_time[2])+\".\"+str(current_time[3])+\".\"+\\\n",
+    "                                       str(current_time[4])+\".\"+str(current_time[5]), \\\n",
+    "            (50,10), cv.FONT_HERSHEY_SIMPLEX, 0.3,(0,0,0),1,cv.LINE_AA)\n",
     "    #/put current time\n",
-    "\n",
+    "    \n",
+    "    #water\n",
+    "    \n",
+    "    if np.sum(frame_water)>0:\n",
+    "        water+=1\n",
+    "        out_raw_water.write(frame_water_RGB)\n",
+    "    \n",
+    "    #/water\n",
     "    #obtain physically connected\n",
     "\n",
     "    zero_distance_0_1 = np.sqrt(np.power((seed_initial[0,-1]-seed_initial[1,-1]),2) + np.power((seed_initial[0,0]-seed_initial[1,0]),2))\n",
@@ -254,7 +267,7 @@
     "    #writing\n",
     "    out_raw.write(frame_original)\n",
     "    out_raw_raw.write(frame_raw)\n",
-    "\n",
+    "    \n",
     "    if zero_distance_0_1<=zero_di_th and zero_distance_0_2<=zero_di_th and zero_distance_1_2<=zero_di_th:\n",
     "        out_raw_connected.write(frame_original)\n",
     "        connected_+=1\n",
@@ -273,8 +286,9 @@
     "        with open(\"D:\"+filename+\".csv\", 'a',newline=\"\") as file:\n",
     "            writer = csv.writer(file)\n",
     "            writer.writerow([str(current_time[0]), str(current_time[1]),str(current_time[2]),str(current_time[3]),str(current_time[4]),\\\n",
-    "                             str(current_time[5]),str(connected_),str(disconnected_),str(pa_disconnected_)])\n",
-    "            \n",
+    "                             str(current_time[5]),str(connected_),str(disconnected_),str(pa_disconnected_),str(water)])\n",
+    "        \n",
+    "        water=0\n",
     "        connected_=0\n",
     "        disconnected_=0\n",
     "        pa_disconnected_=0\n",
