--- a/final/code_final_before_7_top.ipynb
+++ b/final/code_final_before_7_top.ipynb
@@ -86,7 +86,7 @@
     "pa_disconnected_=0\n",
     "restart_=0\n",
     "pups_control = 3\n",
-    "\n",
+    "water=0\n",
     "#obtain current time\n",
     "current_time=[time.localtime().tm_year,time.localtime().tm_mon, \\\n",
     "                  time.localtime().tm_mday, time.localtime().tm_hour, time.localtime().tm_min, \\\n",
@@ -101,11 +101,11 @@
     "out_raw_disconnected = cv.VideoWriter('D:'+filename+'.disconnected.raw.avi', fourcc, fps, (int(width), int(height)))\n",
     "out_raw_pa_disconnected = cv.VideoWriter('D:'+filename+'.pa_disconnected.raw.avi', fourcc, fps, (int(width), int(height)))\n",
     "out_raw_raw = cv.VideoWriter('D:'+filename+'.raw.avi', fourcc, fps, (int(width), int(height)))\n",
-    "\n",
+    "out_raw_water = cv.VideoWriter('D:'+filename+'.water.avi', fourcc, fps, (150, 100))\n",
     "with open(\"D:\"+filename+\".csv\", 'a',newline=\"\") as file:\n",
     "    writer = csv.writer(file)\n",
     "    writer.writerow([\"year\", \"month\",\"day\",\"hour\",\"minute\",\\\n",
-    "                     \"second\",\"1 Group\",\"2 Groups\",\"More than 2 groups\"])\n",
+    "                     \"second\",\"1 Group\",\"2 Groups\",\"More than 2 groups\",\"water\"])\n",
     "\n",
     "#/recording infor\n",
     "\n",
@@ -136,12 +136,12 @@
     "                out_raw_disconnected = cv.VideoWriter('D:'+filename+'.disconnected.raw.avi', fourcc, fps, (int(width), int(height)))\n",
     "                out_raw_pa_disconnected = cv.VideoWriter('D:'+filename+'.pa_disconnected.raw.avi', fourcc, fps, (int(width), int(height)))\n",
     "                out_raw_raw = cv.VideoWriter('D:'+filename+'.raw.avi', fourcc, fps, (int(width), int(height)))\n",
-    "\n",
+    "                out_raw_water = cv.VideoWriter('D:'+filename+'.water.avi', fourcc, fps, (150, 100))\n",
     "                with open(\"D:\"+filename+\".csv\", 'a',newline=\"\") as file:\n",
     "                    writer = csv.writer(file)\n",
     "                    writer.writerow([\"year\", \"month\",\"day\",\"hour\",\"minute\",\\\n",
-    "                                     \"second\",\"1 Group\",\"2 Groups\",\"More than 2 groups\"])\n",
-    "\n",
+    "                                     \"second\",\"1 Group\",\"2 Groups\",\"More than 2 groups\",\"water\"])\n",
+    "                water=0\n",
     "                basis_time=current_time_second\n",
     "                start_time = time.time()\n",
     "                flag_record = 0\n",
@@ -182,6 +182,7 @@
     "    frame_raw = frame_original.copy()\n",
     "    frame_mother = frame_original.copy()\n",
     "    frame_pups = frame_original.copy()\n",
+    "    frame_water = frame_original[250:350,650:800,:].copy()\n",
     "    frame_mother = frame_mother[height_:580,width_:680,1]\n",
     "    frame_pups = frame_pups[height_:580,width_:680,:]\n",
     "    frame_white_mother = np.zeros_like(frame_mother)\n",
@@ -261,20 +262,30 @@
     "\n",
     "    #/pups\n",
     "\n",
+    "    frame_water_RGB=frame_water.copy()\n",
+    "    frame_water= cv.inRange(frame_water, (0,0,0), (outer,outer,outer))\n",
+    "    \n",
     "    #put current time\n",
-    "    cv.putText(frame_raw, str(current_time[0])+\".\"+str(current_time[1])+\".\"+str(current_time[2]), \\\n",
-    "            (0,70), cv.FONT_HERSHEY_SIMPLEX, 0.5,(0,0,0),1,cv.LINE_AA)\n",
-    "    cv.putText(frame_raw, str(current_time[3])+\".\"+\\\n",
+    "    cv.putText(frame_raw, str(current_time[0])+\".\"+str(current_time[1])+\".\"+str(current_time[2])+\".\"+str(current_time[3])+\".\"+\\\n",
     "                                       str(current_time[4])+\".\"+str(current_time[5]), \\\n",
-    "            (0,150), cv.FONT_HERSHEY_SIMPLEX, 0.5,(0,0,0),1,cv.LINE_AA)\n",
-    "    cv.putText(frame_original, str(current_time[0])+\".\"+str(current_time[1])+\".\"+str(current_time[2]), \\\n",
-    "            (0,70), cv.FONT_HERSHEY_SIMPLEX, 0.5,(0,0,0),1,cv.LINE_AA)\n",
-    "    cv.putText(frame_original, str(current_time[3])+\".\"+\\\n",
+    "            (0,20), cv.FONT_HERSHEY_SIMPLEX, 0.5,(0,0,0),1,cv.LINE_AA)\n",
+    "    \n",
+    "    cv.putText(frame_original, str(current_time[0])+\".\"+str(current_time[1])+\".\"+str(current_time[2])+\".\"+str(current_time[3])+\".\"+\\\n",
     "                                       str(current_time[4])+\".\"+str(current_time[5]), \\\n",
-    "            (0,150), cv.FONT_HERSHEY_SIMPLEX, 0.5,(0,0,0),1,cv.LINE_AA)\n",
+    "            (0,20), cv.FONT_HERSHEY_SIMPLEX, 0.5,(0,0,0),1,cv.LINE_AA)\n",
+    "    \n",
+    "    cv.putText(frame_water_RGB, str(current_time[0])+\".\"+str(current_time[1])+\".\"+str(current_time[2])+\".\"+str(current_time[3])+\".\"+\\\n",
+    "                                       str(current_time[4])+\".\"+str(current_time[5]), \\\n",
+    "            (50,10), cv.FONT_HERSHEY_SIMPLEX, 0.3,(0,0,0),1,cv.LINE_AA)\n",
+    "    \n",
     "    #/put current time\n",
-    "\n",
-    "\n",
+    "    #water\n",
+    "    if np.sum(frame_water)>0:\n",
+    "        water+=1\n",
+    "        out_raw_water.write(frame_water_RGB)\n",
+    "        \n",
+    "    #/water\n",
+    "    \n",
     "    #obtain physically connected\n",
     "    if light_==1:\n",
     "        zero_distance_0_1 = np.sqrt(np.power((seed_initial[0,-1]-seed_initial[1,-1]),2) + np.power((seed_initial[0,0]-seed_initial[1,0]),2))\n",
@@ -334,9 +345,9 @@
     "        with open(\"D:\"+filename+\".csv\", 'a',newline=\"\") as file:\n",
     "            writer = csv.writer(file)\n",
     "            writer.writerow([str(current_time[0]), str(current_time[1]),str(current_time[2]),str(current_time[3]),str(current_time[4]),\\\n",
-    "                             str(current_time[5]),str(connected_),str(disconnected_),str(pa_disconnected_)])\n",
+    "                             str(current_time[5]),str(connected_),str(disconnected_),str(pa_disconnected_),str(water)])\n",
     "        \n",
-    "   \n",
+    "        water=0\n",
     "        connected_=0\n",
     "        disconnected_=0\n",
     "        pa_disconnected_=0\n",
